<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/agenda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNome" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTelefone" />

        <EditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/descricao"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:text="@string/btnCad"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDesc" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:text="@string/btnExc"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/btnCadastrar"
            app:layout_constraintTop_toBottomOf="@+id/edtDesc" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:text="@string/btnEdi"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/btnExcluir"
            app:layout_constraintTop_toBottomOf="@+id/edtDesc" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_marginStart="75dp"
            android:background="@drawable/btn"
            android:text="@string/btnLim"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnConsultar" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn"
            android:text="@string/btnConsultar"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/btnLimpar"
            app:layout_constraintTop_toBottomOf="@+id/btnExcluir" />

        <ListView
            android:id="@+id/lstDados"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConsultar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>